@@ -1,3 +1,14 @@
+2009-10-21  Shu Chang  <Chang.Shu@nokia.com>
+
+        Reviewed by Eric Seidel.
+
+        [Qt] Added dummy implementation for keepWebHistory()
+        https://bugs.webkit.org/show_bug.cgi?id=30592
+
+        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
+        (LayoutTestController::keepWebHistory):
+        * DumpRenderTree/qt/LayoutTestControllerQt.h:
+
 2009-10-21  Alejandro G. Castro  <alex@igalia.com>
 
         Reviewed by Xan Lopez.
